--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 </div>
                 <div class="md:w-1/2 flex justify-center">
                     <div class="rounded-full overflow-hidden border-4 border-white shadow-xl w-64 h-64 md:w-80 md:h-80">
-                        <img src="YOUR_IMAGE_URL" alt="Professional portrait photo of Chia-Chun Tsau" class="w-full h-full object-cover" />
+                       <img src="https://placehold.co/400x400" alt="Professional portrait photo of Chia-Chun Tsau" class="w-full h-full object-cover" />
                     </div>
                 </div>
             </div>
